--- a/src/component/OurPeople/ourPeople.css
+++ b/src/component/OurPeople/ourPeople.css
@@ -16,12 +16,14 @@
   color: solid rgb(4, 1, 1);
 }
 .fifth .header {
-  flex: 1;
+  /* flex: 1; */
+  margin:0 .8rem; 
   /* background-color: aquamarine; */
   display: flex;
   justify-content: center;
   align-items: center;
   letter-spacing: 1.5px;
+  font-size:1.3rem;
 }
 .fifth .hr {
   flex: 0.5;
@@ -30,32 +32,46 @@
   flex: 5;
 }
 .fifth .imgPeople {
-  display: grid;
-  grid-template-rows: 370px;
-  grid-template-columns: 300px 300px 300px;
+  /* display: grid;
+  grid-template-columns: 30% 30% 30%; */
+ 
+  /* grid-gap: .7rem; */
+  /* align-content:space-around; */
+  display: flex;
+  /* flex-wrap: wrap; */
+  font-size: 30px;
+  text-align: center;
   justify-content: center;
-  grid-gap: 70px;
+}
+.imgPeople_1 {
+  background-color: #f1f1f1;
+  /* padding: 10px; */
+  flex: 50%;
 }
 
 .fifth img {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  /* height: 100%; */
 }
 
 .image1 {
   position: relative;
+  justify-content: center;
+  /* flex:33%; */
 }
 .overlay {
   position: absolute;
   bottom: 0;
-  left: 0;
-  right: 0;
+  /* left: 0; */
+  right: 5%;
   background-color: #fafafa;
+
   overflow: hidden;
-  width: 100%;
+  width: 90%;
   height: 0;
   transition: 0.5s ease;
-  opacity: 0.3;
+  opacity: 1;
+  color: black;
 }
 .image1:hover .overlay {
   height: 100%;
@@ -65,19 +81,23 @@
   color: rgb(232, 219, 219);
   font-size: 20px;
   position: absolute;
-  top: 50%;
-  left: 45%;
+  top: 45%;
+  left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  width:90%;
   /* text-align: center; */
 }
-
+.people_name_position{
+  font-size:1.2vw;
+  font-weight:500;
+}
 .fifth .company {
   font-family: "Jaldi";
   font-style: normal;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 1.8vw;
   line-height: 110%;
   /* or 28px */
 
@@ -86,4 +106,20 @@ align-items: flex-end;
 text-align: center; */
   letter-spacing: 0.03em;
   color: #040713;
+}
+@media only screen and (max-width: 400px) {
+ .fifth .imgPeople{
+  display: flex;
+  flex-direction: column;
+  margin-bottom:1rem;
+ } 
+ .image{
+  margin-bottom:1rem;
+ }
+ .fifth .company{
+  font-size:4vw;
+ }
+ .people_name_position{
+  font-size:4vw;
+ }
 }
