--- a/src/component/Vision/vision.css
+++ b/src/component/Vision/vision.css
@@ -1,96 +1,152 @@
-
-.fourth{
-    /* background-color: rgb(189, 203, 216); */
-    background-color: rgb(231,243,247);
-    display: grid;
-    justify-content: center;
-    
-    grid-template-rows: 100px 500px;
-    grid-template-columns: 210px 210px 210px;
-    grid-row-gap:50px;
-    grid-column-gap: 60px;
-    
+.vision_flex{
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(231, 243, 247);
+  padding-bottom: 3rem;
 }
-.fourth .box4{
+.fourth {
+  /* background-color: rgb(189, 203, 216); */
+  padding:3rem;
+  display: grid;
+  justify-content: center;
+  /* grid-template-rows: 80px 500px; */
+  /* grid-template-columns: 180px 150px 150px 150px 180px; */
+  grid-template-columns: 20% 20% 20%;
+  grid-row-gap: 50px;
+  grid-column-gap: 60px;
+}
+/* .fourth .box4 {
   grid-column-start: 2;
   grid-row-end: 3;
   grid-column-start: 1;
-  grid-column-end: 4;
-}
-.fourth .box1{   
-box-sizing: border-box;
-background: #FFFFFF;
-border-top: 1px solid #000000;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 25px;
-display: flex;
-justify-content: center;
-align-items: center;
-justify-content: space-around;
+  grid-column-end: 6;
+} */
+.fourth .box1 {
 
+  box-sizing: border-box;
+  background: #ffffff;
+  /* border-top: 1px solid #000000; */
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* justify-content: space-around; */
+  cursor: pointer;
+  font-family: "Calibri";
+  position: relative;
 }
-.fourth .vision{
-    height: 80px;
-    width: 18%;
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #008cba;
+  overflow: hidden;
+  width: 0;
+  height: 100%;
+  transition: 0.5s ease;
+  opacity:0.3;
 }
-.fourth .box1:hover{
-    background-color: rgb(205, 231, 239); 
-    /* color:green; */
-    height: 110px;
+.box1:hover .overlay {
+  width: 100%;
+}
+.fourth .vision {
+  height: 65px;
+  width: 17%;
+  margin-top: -3%;
+  margin-right: 10px;
+  color: green;
+  /* background-color: aquamarine;
+    border-radius: 100%; */
+}
+.fourth .mission {
+  height: 50px;
+  width: 15%;
+  margin-top: -3%;
+  margin-right: 10px;
+  color: green;
+}
+.fourth .history {
+  height: 60px;
+  width: 15%;
+  margin-top: -3%;
+  margin-right: 10px;
+  color: green;
+}
+.fourth .box1:hover {
+  /* background-color: rgb(205, 231, 239);  */
+  /* color:green; */
+  /* height: 110px;
     width: 220px;
-    font-size: 20%;
+    font-size: 20%; */
 }
 
-.fourth .box2{   
-    box-sizing: border-box;
-    background: #FFFFFF;
-    border-top: 1px solid #000000;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 25px;
-    display: flex;
-justify-content: center;
-align-items: center;
-justify-content: space-around;
+.vision_image_grid {
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: grid;
+  grid-template-columns: 50% 50%;
+  width:70%;
+  margin:auto;
+  /* border-radius:0px 20px 20px 0px; */
+  border-radius: 9px;
+  box-shadow: 7px 6px 6px rgba(0, 0, 0, 0.25);
+  /* align-items: center; */
+  /* justify-content: space-between; */
 }
-.fourth .box3{   
-    box-sizing: border-box;
-    background: #FFFFFF;
-    border-top: 1px solid #000000;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 25px;
-    display: flex;
-justify-content: center;
-align-items: center;
-justify-content: space-around;
+ .content {
+  width: 80%;
+  margin: 0 auto;
+  
 }
-.fourth .box4{
-    background: #FFFFFF;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-display: flex;
+.content p{
+  font-size:2.4vmin;
 }
-.fourth .content{
-    width: 50%;
-    /* background-color: antiquewhite; */
-    height: 99%;
+
+.fourth h2 {
+  /* color: rgb(210, 45, 51); */
+  color: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Times New Roman", Times, serif;
+  cursor: pointer;
 }
-.fourth h3{
-    color: rgb(210, 45, 51);
-    display: flex;
-justify-content: center;
-align-items: center;
+.vision_image {
+  width: 100%;
+  /* background-color: rgb(143, 100, 45); */
+  height: 100%;
+  margin-left:auto;
 }
-.fourth .image{
-    width: 50%;
-    /* background-color: rgb(143, 100, 45); */
-    height: 99%;
+
+img {
+  /* height: 100%; */
+  width: 100%;
+  border-radius: 0px 9px 9px 0px;
 }
-.fourth img{
-    
-    height: 100%;
-    width: 100%;
+.fourth p {
+  padding: 30px 60px;
+  letter-spacing: 0.04rem;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  cursor: pointer;
+  font-family: "Calibri", "sanserif";
 }
-.fourth p{
-    padding: 60px 30px;
-    letter-spacing: 0.05rem;
-    line-height: 150%;
+@media only screen and (max-width: 700px){
+.fourth{
+  grid-template-columns:30% 30% 30%; 
+  grid-column-gap:2rem;
+}
+.vision_image_grid{
+  width:90%;
+}
+}
+@media only screen and (max-width: 400px){
+  .fourth{
+    grid-template-columns:33% 33% 33%; 
+    grid-column-gap: .4rem;
+    padding:1rem;
+  }
 }
